--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "tsx": "^4.19.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
